移除开发环境变量支持，简化请求检查逻辑

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "deploy": "wrangler deploy",
-        "dev": "wrangler dev --var DEV=true"
+        "dev": "wrangler dev"
     },
     "devDependencies": {
         "@cloudflare/workers-types": "^4.20250214.0",
